--- a/blurlibrary/build.gradle
+++ b/blurlibrary/build.gradle
@@ -1,41 +1,18 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply from: '../module.gradle'
+
+def ds = rootProject.ext.dependencies
+
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
-
-
     defaultConfig {
-        applicationId "com.lee.blurlibrary"
-        minSdkVersion 15
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        if (isModule) {
+            applicationId "com.lee.blurlibrary"
         }
-    }
-    compileOptions {
-        sourceCompatibility = "1.8"
-        targetCompatibility = "1.8"
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation ds['appcompat']
+    implementation ds['core-ktx']
+    implementation ds['constraintlayout']
+    implementation ds['recyclerview']
 }
