--- a/module.gradle
+++ b/module.gradle
@@ -41,12 +41,15 @@ android {
         main {
             if (isModule) {
                 manifest.srcFile 'src/main/component/AndroidManifest.xml'
+                // 调试用的源码参与编译
+                java.srcDirs 'src/main/component/debug'
+                res.srcDirs 'src/main/component/res'
             } else {
                 manifest.srcFile 'src/main/AndroidManifest.xml'
-                resources {
-                    // 排除调试文件
+                /*resources {
+                    // 排除调试文件 !!!不需要这么做，这个文件夹下的内容不会参与打包
                     exclude 'src/main/component/*'
-                }
+                }*/
             }
         }
     }
@@ -57,8 +60,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = "1.8"
-        targetCompatibility = "1.8"
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
