--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,23 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/app_network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <!--        <activity android:name=".route.test.RouteActivity">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".route.test.TargetActivity" />
+        <activity android:name=".route.test.LoginActivity" />
+        <activity android:name=".route.test.OrderActivity" />
+        <activity android:name=".result.ResultTargetActivity" />
+        <activity android:name=".result.ResultTestActivity" />
     </application>
 
 </manifest>
