--- a/config.gradle
+++ b/config.gradle
@@ -27,7 +27,7 @@ ext {
 
     defaultConfig = [
             applicationId            : 'com.lee.ant',
-            minSdkVersion            : 15,
+            minSdkVersion            : 16,
             targetSdkVersion         : 29,
             versionCode              : 1,
             versionName              : '1.0',
@@ -43,7 +43,7 @@ ext {
             'kotlin-stdlib-jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
             'core-ktx'         : 'androidx.core:core-ktx:1.2.0',
             'appcompat'        : 'androidx.appcompat:appcompat:1.1.0',
-            'constraintlayout' : 'androidx.constraintlayout:constraintlayout:1.1.3',
+            'constraintlayout' : 'androidx.constraintlayout:constraintlayout:2.0.0-beta8',
             'recyclerview'     : 'androidx.recyclerview:recyclerview:1.1.0',
 
             'glide'            : 'com.github.bumptech.glide:glide:4.11.0',
