--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <permission
         android:name="com.lee.ant.permission.ACCESS_BOOK_MANAGER_SERVICE"
-        android:protectionLevel="normal" />
+        android:protectionLevel="dangerous" />
 
-    <uses-permission android:name="com.lee.ant.permission.ACCESS_BOOK_MANAGER_SERVICE" />
+    <!--    <uses-permission android:name="com.lee.ant.permission.ACCESS_BOOK_MANAGER_SERVICE" />-->
 
     <application
         android:allowBackup="true"
@@ -33,7 +33,6 @@
             android:name=".aidl.BookManagerService"
             android:enabled="true"
             android:exported="true"
-            android:permission="com.lee.ant.permission.ACCESS_BOOK_MANAGER_SERVICE"
             android:process=":remote">
             <intent-filter>
                 <action android:name="com.lee.ant.action.BOOK_MANAGER_SERVICE" />
