--- a/lib-gaussianBlur/src/main/component/AndroidManifest.xml
+++ b/lib-gaussianBlur/src/main/component/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lee.blur">
 
+    <uses-permission android:name="com.lee.ant.permission.ACCESS_BOOK_MANAGER_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lee.blur.java.MainActivity">
+        <activity android:name="com.lee.blur.java.AidlActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
