--- a/lib-gaussianBlur/src/main/component/AndroidManifest.xml
+++ b/lib-gaussianBlur/src/main/component/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lee.blur.java.AidlActivity">
+        <activity android:name="com.lee.ant.aidl.AidlActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
